# VFDClockController

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _Specificationtimezone.json  platformio.ini  vfdcontroler_8MB.csv
_Specification/: M5_ControlerPin.xlsx  json作成.xlsm  setLang.js
_Specification/document/: disomode.dio
_Specification/en/: tzlang.json
_Specification/ja/: Indian_menu.json  tzlang.json
data/: json.html  setting.js
lib/: CMakeLists.txt
lib/InputTerminal/src/: InputTerminal.cpp
src/: CMakeLists.txt  driver_sub.cpp  driver_sub.h  filesys.h  jsdata.cpp  jsdata.h  main.cpp  mode_ctrl.cpp  mode_ctrl.h  monitor.cpp  monitor.h  monitor_real_serial.cpp  monitor_real_serial.h  monitor_serial.cpp  monitor_serial.h  ram.cpp  sound.cpp  sound.h  vfd_conf.cpp  vfd_conf.h  vfd_disp.cpp  vfd_disp.h  vfd_driver.cpp  vfd_driver.h  vfd_eerom.cpp  vfd_eerom.h  vfd_rtc.cpp  vfd_rtc.h  vfd_web.cpp  vfd_web.h  vfd_wificnt.cpp  vfd_wificnt.h
test/: CMakeLists.txt  MockSerialMonitorIO.h  test000.cpp  test_driver_sub.cpp  test_mode_ctrl.cpp  test_monitor.cpp
test/main/: CMakeLists.txt  test_main.cpp
webpack/: babel.config.js  babel.config.js_  package-lock.json  package.json  webpack.config.js
webpack/__tests__/: eventlog.test.js  json.test.js  sum.test.js
webpack/src/: custom.scss  index.js  index.scss
webpack/src/infra/: timezone.json  timezone.json_  timezoneArea.json
webpack/src/model/: vfdControllerDomain.js
webpack/src/view/: app-main.riot  appmain.js  dashbord.riot  deviceconf.riot  dispconf.riot  footer.riot  (+4 more)
webpack/src_test/: setting.js
(+6 files in other folders)
